# MLMM-Potential

./: README.md  REAME.md  compare.py  config.yml  config_Tim.yml  mlmm_main_pl.py  requirements.old  requirements.txt  run.inp  run.sh  run_training.sh
doc/: Genesis_ML_Interface.md  ML_Model.md
mlmm/: __init__.py  mlmm_main.py  mlmm_main_pl.py
mlmm/ReadOut/: ReadOut.py  __init__.py
mlmm/baal_kelp/: __init__.py  data_module.py  loop.py  myheuristic.py  pytorch_dataset.py  sampler.py
mlmm/baal_maxstep/: data.py  data_module.py  dropout.py  get_label.py  loop.py  pytorch_dataset.py  sampler.py
mlmm/dataset/: __init__.py  analysis.ipynb  dataset_pretrain.py  molecule_datamodule.py  mydataset_alphachem.py  mydataset_alphachem_bak.py  mydataset_alphachem_bak2.py  mydataset_alphachem_bak3.py  mydataset_alphachem_bak4.py  mydataset_alphachem_mp_process_share_memory.py
mlmm/model/: __init__.py  model_mlmm.py  model_pl.py
mlmm/nn/: __init__.py  acsf.py  act.py  activations.py  aggregator.py  attension.py  base.py  blocks.py  cfconv.py  cutoff.py  equvariant_message.py  graph_norm.py  mpnn_relation.py  update_coor.py
mlmm/opt/: diffmod.py  lr_scheduler.py
mlmm/representation/: MolCT.py  __init__.py  field_conv.py  field_conv2.py  (+3 more)
my_genesis_multipole/: Makefile  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  make_log
my_genesis_multipole/src/analysis/free_energy/mbar_analysis/: Makefile  Makefile.am  Makefile.in  ma_analyze.fpp  ma_control.fpp
scripts_for_prepare_data/: merge_h5.py  read_data.sh  read_label_data.py  submit_read_data.sh
server/: main.py  qmmm_server.py  sockets.py
(+449 files in other folders)
